fix top bar back and forward buttons are not aligned

--- a/Fluent/user.css
+++ b/Fluent/user.css
@@ -233,6 +233,7 @@ h3,
   margin-left: 60px;
   background-color: var(--spice-text) !important;
   padding: 5px;
+  align-self: center;
   width: 24px !important;
   height: 24px !important;
 }
@@ -241,6 +242,7 @@ h3,
   -webkit-mask-image: url('./fluentui-system-icons/ic_fluent_arrow_right_24_filled.svg');
   background-color: var(--spice-text) !important;
   padding: 5px;
+  align-self: center;
   width: 24px !important;
   height: 24px !important;
 }
